@@ -1,3 +1,8 @@
+2001-01-26  Chema Celorio  <chema@celorio.com>
+
+	* be.pl.in: if $verbose, print the file name before it is
+	opened
+
 2001-01-25  Arturo Espinosa  <arturo@ximian.com>
 
 	* new_network-conf.in, network.pl.in, parse.pl.in: completly new
